Add general info, notes, setup and running instructions